syntax = "proto3";

package social.v1;

service LikeService {
  rpc LikeCastPost(LikeCastPostRequest) returns (LikeCastPostResponse);
  rpc UnlikeCastPost(UnlikeCastPostRequest) returns (UnlikeCastPostResponse);
  rpc GetPostLikeStatus(GetPostLikeStatusRequest) returns (GetPostLikeStatusResponse);
}

message LikeCastPostRequest {
  string post_id = 1;
}

message LikeCastPostResponse {
  int32 likes_count = 1;
}

message UnlikeCastPostRequest {
  string post_id = 1;
}

message UnlikeCastPostResponse {
  int32 likes_count = 1;
}

message GetPostLikeStatusRequest {
  repeated string post_ids = 1;
}

message GetPostLikeStatusResponse {
  map<string, bool> liked = 1; // post_id -> is_liked
}
